# AIHomeAssistant

./: .gitignore  CMakelists.txt  Dockerfile  Learnings.md  Makefile  README.md  commands.gram  cross-compile  keyword.dict  keyword.list  notes.md  roadmap.md  run-docker
.docker/: Dockerfile.core.arm64  Dockerfile.led_manager.arm64  Dockerfile.security_camera.arm64  Dockerfile.security_camera.arm64v8-ubuntu18
.docker/compile/: Dockerfile  docker-compose.yml
dump/: ble_cli.cpp  device_manager.cpp  device_manager.h  idk.py  main2.cpp  new.py
dump/compile/: Makefile
inc/: audio_capture.h  ble_device.h  core.h  device.h  device_manager.h  kernel.h  keyword_detector.h  led_manager.h  log.h  manager.h  voice_control.h
service_manager/: .env  Cargo.toml  bnr  example.env
service_manager/config/: devices.template.yaml  devices.yaml
service_manager/frontend/: Cargo.toml  index.html
service_manager/frontend/src/: main.rs  parser.rs
service_manager/src/: api.rs  device.rs  error.rs  main.rs  mqtt_client.rs  service.rs  websocket.rs
services/common/inc/: log.h
services/core/: CMakeLists.txt  core.service  dependencies.txt
services/core/inc/: audio_capture.h  core.h  keyword_detector.h
services/core/src/: audio_capture.cpp  core.cpp  keyword_detector.cpp  main.cpp
services/interfaces/mqtt_interface/: mqtt_interface.h  paho_mqtt_client.cpp  paho_mqtt_client.h
services/interfaces/service_interface/: service_interface.h
services/led_manager/: CMakeLists.txt  dependencies.txt  led_manager.service
services/led_manager/inc/: ble_device.h  led_manager.h
services/led_manager/src/: ble_device.cpp  led_manager.cpp  main.cpp
services/security_camera/: CMakeLists.txt  dependencies.txt  security_camera.service
services/security_camera/inc/: camera_capture.h  frame_processor.h  security_camera.h
services/security_camera/src/: camera_capture.cpp  frame_processor.cpp  main.cpp  security_camera.cpp
src/: audio_capture.cpp  ble_device.cpp  core.cpp  device.cpp  device_manager.cpp  kernel.cpp  keyword_detector.cpp  led_manager.cpp  log.cpp  main.cpp  main2.cpp  manager.cpp
targets/arm64/: core_service
