[package]
name = "service_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
paho-mqtt = "0.12.5"
thiserror = "2.0.1"
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"  # If using YAML
serde_json = "1.0.132"
once_cell = "1.18"
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
